# src/docs/swagger.json
@@ -428,6 +428,44 @@
                     }
                 }
             },
+            "post": {
+                "summary": "Change team information",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Team id",
+                        "name": "team_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "New information",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/teams.UpdateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/storage.Team"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            },
             "delete": {
                 "summary": "Delete team by id",
                 "parameters": [
@@ -497,7 +535,7 @@
         },
         "/teams/{team_id}/leave": {
             "post": {
-                "summary": "Change team captain",
+                "summary": "Leave the team",
                 "parameters": [
                     {
                         "type": "string",
@@ -1017,6 +1055,14 @@
             }
         },
         "teams.CreateRequest": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "teams.UpdateRequest": {
             "type": "object",
             "properties": {
                 "name": {
